# mcp

./: .gitignore  .pre-commit-config.yaml  .release-it.json  AGENTS.md  README.md  biome.json  fable5.md  lint-staged.config.mjs  package.json  pnpm-lock.yaml  turbo.json
apps/codemap-search/: .dockerignore  AGENTS.md  CHANGELOG.ko.md  CHANGELOG.md  Cargo.toml  LICENSE  README.ko.md  README.md  install.sh
apps/codemap-search/benchmarks/: README.md
apps/codemap-search/benchmarks/bench-2026-06/: tasks-ollama.json  tasks-surrealdb.md
apps/codemap-search/benchmarks/bench-2026-06-django-strapi/harness/: ab-probe.sh  extract-metrics.sh  run-one-episode.sh  write-scores.sh
apps/codemap-search/docker/: .dockerignore  .gitignore  Dockerfile.build-gnu  Dockerfile.build-musl  README.md  verify.sh
apps/codemap-search/docs/: agent-benchmark-followups.md  agent-benchmark-playbook.md  benchmark-evolution-codex.md  benchmark-evolution.md  benchmark-workflow-codex.md  benchmark-workflow.md  configuration.md  design-callchain-tracing.md  improvement-candidates-2026-06-12.md  language-support-checklist.md  release-distribution-strategy.md  shallow-resolution-layer-v2.md  shallow-resolution-layer.md  starlight-docs-site-structure.md
apps/codemap-search/docs/bench-2026-06/: analysis-iter1.md  analysis-iter2.md  episode-runbook.md  tasks-clickhouse.json  tasks-surrealdb.md
apps/codemap-search/docs/bench-2026-06-django-strapi/: baseline-runbook.md  gate-verdict-ds-base1.md  gate-verdict-ds-iter2.md  gate-verdict-ds-iter3.md  gate-verdict.md  mcp-codemap.json  tasks-django.json  tasks-strapi.json
apps/codemap-search/docs/bench-2026-06-django-strapi/harness/: aggregate-results.sh  build-scoring-batches.sh  config.sh  run-matrix.sh
apps/codemap-search/docs/distribution/: crates-io.md  curl-installer.md  first-release-checklist.md  homebrew.md  index.md  winget.md
apps/codemap-search/packaging/homebrew/: codemap-search.rb
apps/codemap-search/packaging/winget/: com.livteam.codemap-search.installer.yaml  com.livteam.codemap-search.locale.en-US.yaml  com.livteam.codemap-search.yaml
apps/codemap-search/queries/asm/: navigation.scm  symbols.scm  tags.scm
apps/codemap-search/queries/c/: navigation.scm  static_collection_edges.scm  symbols.scm
apps/codemap-search/queries/cmake/: symbols.scm
apps/codemap-search/queries/containerfile/: symbols.scm
apps/codemap-search/queries/cpp/: navigation.scm  static_collection_edges.scm  symbols.scm  tags.scm
apps/codemap-search/queries/css/: symbols.scm
apps/codemap-search/queries/go/: navigation.scm  static_collection_edges.scm  symbols.scm  tags.scm
apps/codemap-search/queries/graphql/: symbols.scm
apps/codemap-search/queries/hcl/: symbols.scm
apps/codemap-search/queries/html/: symbols.scm
apps/codemap-search/queries/java/: navigation.scm  static_collection_edges.scm  symbols.scm  tags.scm
apps/codemap-search/queries/javascript/: navigation.scm  static_collection_edges.scm  symbols.scm  tags.scm
apps/codemap-search/queries/json/: symbols.scm
apps/codemap-search/queries/kotlin/: navigation.scm  static_collection_edges.scm  symbols.scm  tags.scm
apps/codemap-search/queries/less/: symbols.scm
apps/codemap-search/queries/make/: symbols.scm
apps/codemap-search/queries/proto/: symbols.scm
apps/codemap-search/queries/python/: navigation.scm  static_collection_edges.scm  symbols.scm  tags.scm
apps/codemap-search/queries/rust/: navigation.scm  static_collection_edges.scm  symbols.scm  tags.scm
apps/codemap-search/queries/scss/: symbols.scm
apps/codemap-search/queries/sql/: symbols.scm
apps/codemap-search/queries/starlark/: symbols.scm
apps/codemap-search/queries/toml/: symbols.scm
apps/codemap-search/queries/typescript/: navigation.scm  static_collection_edges.scm  symbols.scm  tags.scm
apps/codemap-search/queries/xml/: symbols.scm
apps/codemap-search/queries/yaml/: symbols.scm
apps/codemap-search/queries/zsh/: symbols.scm
apps/codemap-search/src/: benchmark.rs  callers.rs  codemap.rs  config.rs  config_locale.rs  config_template.ko.toml  config_template.toml  index.rs  indexer.rs  lib.rs  main.rs  mcp.rs  parser.rs  watcher.rs  workspace.rs
apps/codemap-search/src/callers/: annotate.rs  callees.rs  mod.rs  scan.rs  symbols.rs
apps/codemap-search/src/codemap/: mod.rs  monorepo.rs  summary.rs  tree.rs
apps/codemap-search/src/index/: engine.rs  indexer.rs  mod.rs  ranking.rs  supervisor.rs  watcher.rs
apps/codemap-search/src/lang/: asm.rs  bash.rs  cmake.rs  containerfile.rs  css.rs  format_support.rs  go.rs  graphql.rs  hcl.rs  html.rs  java.rs  javascript.rs  json.rs  kotlin.rs  less.rs  make.rs  mod.rs  proto.rs  python.rs  rust.rs  scss.rs  sql.rs  starlark.rs  toml.rs  typescript.rs  xml.rs  yaml.rs  zsh.rs
apps/codemap-search/src/lang/c_family/: c.rs  cpp.rs  mod.rs
apps/codemap-search/src/mcp/: mod.rs  protocol.rs
apps/codemap-search/src/parser/: composite.rs  mod.rs  tokenize.rs  types.rs
apps/codemap-search/src/tools/: find.rs  grep.rs  mod.rs  overview.rs  read.rs
apps/codemap-search/src/tools/instructions/: navigation.md  navigation.monorepo.md  server.md
apps/codemap-search/src/tools/instructions/tools/: find.md  grep.md  initial_instructions.md  initial_instructions.monorepo.md  overview.md  overview.monorepo.md  read.md  search.md  search.monorepo.md
apps/codemap-search/src/tools/overview/: monorepo.rs
apps/codemap-search/src/tools/search/: mod.rs  monorepo.rs  render.rs
apps/codemap-search/tests/: extract_snapshots.rs  file_format_fixtures.rs  navigation_fixtures.rs
apps/codemap-search/tests/e2e/: benchmark.rs  codemap.rs  config.rs  cross_feature.rs  helpers.rs  mcp.rs  mod.rs  parser.rs  scenarios.rs  search.rs  tools.rs  watcher.rs
apps/codemap-search/tests/fixtures/extract/: README.md  sample.c  sample.cpp  sample.go  sample.hpp  sample.java  sample.js  sample.jsx  sample.kt  sample.py  sample.rs  sample.s  sample.ts  sample.tsx
apps/codemap-search/tests/fixtures/extract/golden/: sample.c.json  sample.cpp.json  sample.go.json  sample.hpp.json  sample.java.json  (+8 more)
(+1282 files in other folders)
