[package]
name = "codemap-search"
version = "0.5.0"
edition = "2021"
authors = ["Buyong Lee"]
description = "A self-contained MCP stdio server for coding agents: BM25 code search, an aider-style codemap, and embedded read/find/grep (ripgrep as a library)."
license = "MIT"
repository = "https://github.com/buYoung/mcp"
readme = "README.md"
keywords = ["mcp", "code-search", "tree-sitter", "tantivy", "ripgrep"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".codemap/", ".codemap-index/", "/docs", "/tests/fixtures"]

[dependencies]
# CLI Argument parsing
clap = { version = "4.6", features = ["derive"] }

# Tree-sitter AST extraction
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
# Kotlin: the actively-maintained rewrite (`-ng`) exposes the `LANGUAGE: LanguageFn`
# constant and links against tree-sitter 0.26's ABI; the older `tree-sitter-kotlin`
# (0.3.x, fwcd) still ships the legacy `language()` fn and is not compatible here.
tree-sitter-kotlin-ng = "1.1"
# C/C++: both 0.24.x/0.23.x generations expose `LANGUAGE: LanguageFn` and link
# against tree-sitter-language 0.1.x (the 0.26 ABI shim). `.h` files are parsed
# with the C++ grammar because most real-world headers lean C++ and the grammar
# accepts plain C tolerantly.
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
# Assembly (GAS-style): tree-sitter-asm 0.24.0 is published on crates.io, exposes
# `LANGUAGE: LanguageFn`, and links against the same 0.26 ABI. Covers AT&T syntax
# (`.s`/`.S`) and Intel syntax (`.asm`). Labels are the primary symbol kind.
tree-sitter-asm = "0.24"
# SQL: `tree-sitter-sequel` 0.3.x exposes the tree-sitter 0.26-compatible
# `LANGUAGE: LanguageFn` API used by the other grammar crates above.
tree-sitter-sequel = "0.3"
# File-format grammars use the same `tree-sitter-language` 0.1 / `LANGUAGE.into()` ABI
# as the programming-language grammars above. They are limited to the published 0.26-
# compatible crates verified in the language-support research: MIT except HCL (Apache-2.0).
tree-sitter-json = "0.24.8" # MIT
tree-sitter-toml-ng = "0.7.0" # MIT
tree-sitter-yaml = "0.7.2" # MIT
tree-sitter-html = "0.23.2" # MIT
tree-sitter-xml = "0.7.0" # MIT
tree-sitter-css = "0.25.0" # MIT
tree-sitter-bash = "0.25.1" # MIT
tree-sitter-hcl = "1.1.0" # Apache-2.0
tree-sitter-proto = "0.4.0" # MIT
tree-sitter-graphql = "0.1.0" # MIT
tree-sitter-scss = "1.0.0" # MIT
tree-sitter-less = "1.0.0" # MIT
tree-sitter-zsh = "0.63.4" # MIT
tree-sitter-containerfile = "0.9.2" # MIT
tree-sitter-make = "1.1.1" # MIT
tree-sitter-cmake = "0.7.4" # MIT
tree-sitter-starlark = "1.3.0" # MIT

# Tantivy search engine for BM25 text indexing
tantivy = "0.26"

# JSON-RPC / Serialization for MCP and state persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async MCP server communication
tokio = { version = "1.52", features = ["full"] }

# Directory scanning and file path iteration
walkdir = "2.5"

# Error handling
anyhow = "1.0"

# Logging / Diagnostics. `env-filter` powers the default quiet filter (deps at warn,
# this crate at info) so dependency INFO noise (tantivy commit/GC per search) stays off
# stderr unless RUST_LOG raises it.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regular expressions and text processing
regex = "1.12"

# TOML config parsing (Child 05). Lenient `toml::Value` parse so unknown keys/types
# degrade to a stderr warning + default rather than failing the load (never-exit).
toml = "1.1"

# Embedded ripgrep engine (library crates, NOT a bundled `rg` binary) powering the
# read/find/grep tools. `grep` re-exports grep-matcher/grep-regex/grep-searcher.
# `ignore` gives gitignore + `.codemapignore` parity and the parallel/typed walk;
# `globset` provides glob matching. Pinned for reproducible public-release builds.
grep = "0.4"
ignore = "0.4"
globset = "0.4"

# Filesystem watcher (inotify/FSEvents/ReadDirectoryChanges) driving autonomous
# incremental index refresh (`watcher.rs`). The debounce loop is hand-written —
# no `notify-debouncer-*` crate.
notify = "8.2.0"

# tree-sitter 0.22+ yields query matches as a `StreamingIterator` (not std
# `Iterator`), driving the `while let Some(mat) = matches.next()` loop in
# `parser.rs`. Tracks the same 0.1.x line `tree-sitter` itself depends on.
streaming-iterator = "0.1.9"

[target.'cfg(target_os = "macos")'.dependencies]
# CoreFoundation API bindings used only on macOS for generated config comment language.
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"

[target.'cfg(windows)'.dependencies]
# Win32 Globalization bindings used only on Windows for generated config comment language.
windows-sys = { version = "0.61.2", features = ["Win32_Globalization"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux locale parsing is delegated to sys-locale instead of hand-rolled env parsing.
sys-locale = "0.3.2"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"
filetime = "0.2"
